<resources>
    <string name="app_name">SUAV</string>
    <string name="auth_preference_file_key">com.example.suav.AUTH_PREFERENCE_FILE_KEY</string>
    <string name="login_button_text">Login</string>
    <string name="auth_email_hint">Email</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_msg_hint"></string>
    <string name="auth_instructions">Login With AirMap</string>
    <string name="auth_success">Login successful.</string>
    <string name="auth_error">Something went wrong. Please try again.</string>
    <string name="opensky_url">https://opensky-network.org/api/states/all</string>
    <string name="fp_menu_title">Flight Planning</string>
    <string name="ppa_menu_title">Location Picker</string>
    <string name="mm_menu_title">SUAV</string>
    <string name="pd_menu_title">Pin Details</string>
    <string name="ed_menu_title">Event Details</string>
    <string name="profile_menu_title">Pilot Profile</string>
    <string name="weather_menu_title">Check The Skies</string>
    <string name="briefing_menu_title">Flight Briefing</string>
    <string name="menu_weather_txt">Weather</string>
    <string name="menu_profile_txt">Profile</string>
    <string name="airmap_error">Airmap Error: </string>
    <string name="airmap_client_id">04ac7eed-c654-4c5a-867b-6d68291dec4a</string>
    <string name="airmap_auth_url">https://auth.airmap.com/realms/airmap/protocol/openid-connect/token</string>
    <string name="briefing_title">Flight Briefing</string>
    <string name="briefing_submit">Submit</string>
    <string name="briefing_back">Back</string>
    <string name="briefing_violation"> - Violated</string>
    <string name="briefing_following"> - Followed</string>
    <string name="briefing_violations"> Violations: </string>
    <string name="briefing_submission_error">Submission Failure</string>
    <string name="briefing_submission_error_toast">Failed to submit flight, </string>
    <string name="briefing_api_error">Error connecting to the AirMap Flight Briefing API, please try again later</string>
    <string name="briefing_submission">Flight Aprroved!</string>
    <string name="planning_title">Flight Planning</string>
    <string name="planning_submit">Create Plan</string>
    <string name="planning_new_event">Create Event</string>
    <string name="planning_altitude">Max. Altitude</string>
    <string name="planning_units">(meters)</string>
    <string name="planning_date">Date</string>
    <string name="planning_stime">Start Time</string>
    <string name="planning_etime">End Time</string>
    <string name="planning_submission_error">Airmap Planning Error </string>
    <string name="planning_submission_error_toast">Error connecting to the AirMap Flight Plan API, please try again later</string>
    <string name="planning_etime_error">Please make sure that your end time is after your starting time</string>
    <string name="planning_altitude_error">Please input a valid number for altitude.</string>
    <string name="ruleset_error_toast">Error connecting to the AirMap Ruleset API, please try again later</string>
    <string name="ruleset_error">Airmap Planning Error </string>
    <string name="profile_username">Username</string>
    <string name="profile_email">Email</string>
    <string name="profile_firstname">First Name</string>
    <string name="profile_lastname">Last Name</string>
    <string name="profile_submit">Save Changes</string>
    <string name="profile_error_toast">Error connecting to the AirMap Pilot API, please try again later</string>
    <string name="profile_submit_success">Information Updated!</string>
    <string name="weather_title">Check The Skies</string>
    <string name="weather_condition">Condition:</string>
    <string name="weather_temperature">Temperature:</string>
    <string name="weather_precipitation">Precipitation:</string>
    <string name="weather_visibility">Visibility:</string>
    <string name="weather_wind">Wind:</string>
    <string name="weather_humidity">Humidity:</string>
    <string name="weather_error_toast">Error connecting to the AirMap Weather API, please try again later</string>
    <string name="weather_temperature_unit"> C</string>
    <string name="weather_precipitation_unit">%</string>
    <string name="weather_visibility_unit">km</string>
    <string name="weather_wind_unit">kmph</string>
    <string name="weather_humidity_unit">%</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGVubmlza2E5IiwiYSI6ImNrbXYxMnd1djAwbmUycGt2cmdpN3NsencifQ.doCZcsysKJmsm92mU1bftA</string>
    <string-array name="layer_spinner_array">
        <item>Water</item>
        <item>Building</item>
    </string-array>
    <string name="menu_map_style_streets">Streets</string>
    <string name="menu_map_style_dark">Dark</string>
    <string name="menu_map_style_light">Light</string>
    <string name="menu_map_style_outdoors">Outdoors</string>
    <string name="menu_map_style_satellite">Satellite</string>
    <string name="menu_map_style_satellite_streets">Satellite streets</string>
    <string name="move_map_instruction">Move map to place\nmarker at desired location</string>
    <string name="zoom_map_in_and_out_instruction">Zoom in and out to see cluster numbers change</string>
    <string name="tap_on_feature_box_instruction">Tap on bounding box</string>
    <string name="fragment_in_card_below">Map fragment container in card below</string>
    <string name="download_button_text">Download</string>
    <string name="list_button_text">List</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="location_component_fragment_text">User\'s current location on a map fragment</string>
    <string name="new_location">New lat: %1$s New longitude: %2$s</string>
    <string name="settings_dialog_title">Settings</string>
    <string name="settings_dialog_positive_button_text">Save</string>
    <string name="settings_status_toast_settings_saved">Settings saved</string>
    <string name="settings_dialog_negative_button_text">Cancel</string>
    <string name="analytics_opt_out_textview">Opt out of analytics tracking</string>
    <string name="login_or_signup_account_switch_text">Always show account login/creation screen</string>
    <string name="log_out_of_account_button">Log out of Mapbox account</string>
    <string name="log_out_toast_confirm">Successfully logged out</string>
    <string name="basic_offline_deleted_toast">Yosemite offline map deleted</string>
    <string name="draw_marker_options_title">Hello World!</string>
    <string name="draw_marker_options_snippet">Welcome to my marker.</string>
    <string name="directions_activity_toast_message">Route is %1$f meters long.</string>
    <string name="snaking_directions_activity_error">Direction route retrieval failed</string>
    <string name="dialog_title">Name new region</string>
    <string name="dialog_message">Downloads the map region you currently are viewing</string>
    <string name="dialog_positive_button">Download</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_toast">Region name cannot be empty.</string>
    <string name="end_progress_success">Region downloaded successfully.</string>
    <string name="toast_no_regions_yet">You have no regions yet.</string>
    <string name="toast_region_deleted">Region deleted</string>
    <string name="navigate_positive_button">Navigate to</string>
    <string name="navigate_neutral_button_title">Delete</string>
    <string name="navigate_negative_button_title">Cancel</string>
    <string name="navigate_title">List</string>
    <string name="region_name">Region %1$d</string>
    <string name="set_region_name_hint">Enter name</string>
    <string name="simple_offline_end_progress_success">Region downloaded successfully.</string>
    <string name="feature_count_snackbar_feature_size">%1$d features in box</string>
    <string name="query_feature_marker_title">Properties:</string>
    <string name="query_feature_no_properties_found">No feature properties found</string>
    <string name="location_picker_select_location_button_cancel">Cancel</string>
    <string name="location_picker_select_location_button_select">Select Location</string>
    <string name="location_picker_dropped_marker_snippet_no_results">No results</string>
    <string name="location_picker_place_name_result">Place name: %1$s</string>
    <string name="location_picker_create_pin_button">Create Pin</string>
    <string name="location_picker_weather_button">Check The Skies</string>
    <string name="fab_title_hotels">Hotels</string>
    <string name="fab_title_parks">Parks</string>
    <string name="fab_title_attractions">Attractions</string>
    <string name="language_switch_options_menu_language_english">English</string>
    <string name="language_switch_options_menu_language_french">French</string>
    <string name="language_switch_options_menu_language_russian">Russian</string>
    <string name="language_switch_options_menu_language_german">German</string>
    <string name="language_switch_options_menu_language_spanish">Spanish</string>
    <string name="language_switch_options_menu_language_italian">Italian</string>
    <string name="language_switch_options_menu_language_vietnamese">Vietnamese</string>
    <string name="language_switch_options_menu_language_korean">Korean</string>
    <string name="language_switch_options_menu_language_japanese">Japanese</string>
    <string name="language_switch_options_menu_language_simplified_chinese">Simplified Chinese</string>
    <string name="language_switch_options_menu_language_traditional_chinese">Traditional Chinese</string>
    <string name="tap_on_map_instruction">Tap anywhere on the map</string>
    <string name="tap_on_map_for_notification">Tap on map to get a notification with map image</string>
    <string name="san_francisco">San Francisco</string>
    <string name="los_angeles">Los Angeles</string>
    <string name="seattle">Seattle</string>
    <string name="new_orleans">New Orleans</string>
    <string name="chicago">Chicago</string>
    <string name="philadelphia">Philadelphia</string>
    <string name="new_york">New York</string>
    <string name="atlanta">Atlanta</string>
    <string name="portland">Portland</string>
    <string name="denver">Denver</string>
    <string name="minneapolis">Minneapolis</string>
    <string name="miami">Miami</string>
    <string name="extrusions_category">3D Extrusions</string>
    <string name="plugins_category">Plugins</string>
    <string name="tv_create_account_button">Create account</string>
    <string name="tv_sign_in_to_account_button">Sign in</string>
    <string name="landing_cta_tv_text">Create or sign in to your Mapbox account to view the latest Mapbox demos</string>
    <string name="skip_for_now_bottom_button">Skip for now</string>
    <string name="do_not_show_again_button_text">Don\'t ask again</string>
    <string name="whoops_error_dialog_title">Whoops!</string>
    <string name="whoops_error_dialog_message">Looks like something went wrong with the log in process! Please try clearing your browser\'s cache/cookies and then sign back in.</string>
    <string name="whoops_error_dialog_ok_positive_button">Ok</string>
    <string name="loading_textview">Loading&#8230;</string>
    <string name="space_station_toast">Zoom in closely on the space station\nto see it moving across the map</string>
    <string name="change_anchor">Change anchor</string>
    <string name="change_intensity">Change intensity</string>
    <string name="event_title">Event Details</string>
    <string name="event_name">Name:</string>
    <string name="event_description">Description:</string>
</resources>