<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAuthInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/auth_instructions"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtAuthEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ems="10"
            android:hint="@string/auth_email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtAuthPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ems="10"
            android:hint="@string/auth_password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnAuthLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text" />

        <TextView
            android:id="@+id/txtAuthResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_msg_hint" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>